--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,7 +1,7 @@
 pipeline{
     agent { label "Docker"}
     stages{
-        stage{
+        stage ("git clone"){
             steps{
                 git clone: "https://github.com/ramesh1469/Nopcommerce.git",
                 branch: "main"
