--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@ pipeline{
     stages{
         stage ("git clone"){
             steps{
-                git clone: "https://github.com/ramesh1469/Nopcommerce.git",
+                git url: "https://github.com/ramesh1469/Nopcommerce.git",
                 branch: "main"
 
             }
