--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,7 +12,11 @@ pipeline{
             agent { label "Docker"}
             steps{
                 withSonarQubeEnv('sonar') {
-                sh 'dotnet build. sonar:sonar'
+                sh '''
+                    SonarScanner.MSBuild.exe begin /k:"devops" /d:sonar.host.url="http://3.136.37.2:32768" /d:sonar.token="sqp_808838da3be27167810f638996ae63f23bf7a83c",
+                    MsBuild.exe /t:Rebuild,
+                    SonarScanner.MSBuild.exe end /d:sonar.token="sqp_808838da3be27167810f638996ae63f23bf7a83c"
+                    '''
           }
          }
         } 
