--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,9 +12,9 @@ pipeline{
             agent { label "Docker"}
             steps{
                 sh """
-                    aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/w3l4u7g2,
-                    docker image build -t ram:1 . ,
-                    docker tag ram:1:latest public.ecr.aws/w3l4u7g2/ram2:latest,
+                    aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/w3l4u7g2
+                    docker image build -t ram:1 . 
+                    docker tag ram:1:latest public.ecr.aws/w3l4u7g2/ram2:latest
                     docker push public.ecr.aws/w3l4u7g2/ram2:latest
                     """                  
             }
